force-app/main/default/objects/Assignment__c/fields/Crew_Member__c.field-meta.xml
<CustomField>
    <fullName>Crew_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew Member</label>
    <referenceTo>Crew_Member__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>