force-app/main/default/objects/Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assignment_Date__c</columns>
    <columns>Crew_Member__c</columns>
    <columns>Passenger__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>